data-engineering-pipeline-demo-ocp/05-superset/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: superset
  namespace: amq
  labels:
    app: superset
    opendatahub.io/component: "true"
    component.opendatahub.io/name: superset
spec:
  replicas: 1
  selector:
    deploymentconfig: superset
  template:
    metadata:
      labels:
        app: superset
        deploymentconfig: superset
    spec:
      containers:
        - name: superset
          command:
            - /bin/sh
            - entrypoint.sh
          image: quay.io/aiops/superset:v0.30
          imagePullPolicy: Always
          ports:
            - containerPort: 8088
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/superset
              name: superset-data
            - mountPath: /etc/superset
              name: superset-config
      volumes:
        - name: superset-data
          persistentVolumeClaim:
            claimName: superset-data
        - configMap:
            defaultMode: 420
            items:
              - key: superset_config.py
                path: superset_config.py
            name: superset
          name: superset-config
  triggers:
    - type: ConfigChange
