data-engineering-pipeline-demo-ocp/05-superset/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: superset
  namespace: data-engineering-demo
  labels:
    app: superset
    opendatahub.io/component: "true"
    component.opendatahub.io/name: superset
spec:
  port:
    targetPort: 8088-tcp
  to:
    kind: Service
    name: superset
